@@ -1,5 +1,10 @@
 2002-02-13  Richard Frith-Macdonald <rfm@gnu.org>
 
+	* Source/NSUserDefaults.m: Removed some code that was doing nothing,
+	and tidied a little.
+
+2002-02-13  Richard Frith-Macdonald <rfm@gnu.org>
+
 	* Headers/Foundation/NSPathUtilities.h: GSDefaultsRootForUser()
 	function added.
 	* Source/NSUser.m: Many alterations to do with correcting the
@@ -10,7 +15,7 @@
 	* Source/NSUserDefaults.m: Use GSDefaultsRootForUser()
 	Fix a few bugs in setting up defaults database.
 	Move defaults database to the Defaults subdirectory.
-	* Source/Headers/GSIMpa.h: Fix error in last commit.
+	* Source/Headers/GSIMap.h: Fix error in last commit.
 
 2002-02-13  Richard Frith-Macdonald <rfm@gnu.org>
 
